Bug 155011 - An HTML reports a failed assert on open in Writer
Summary: An HTML reports a failed assert on open in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer Web (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.3.2
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-04-25 14:51 UTC by Mike Kaganski
Modified: 2023-05-03 10:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A reproducer (479 bytes, text/html)
2023-04-25 14:51 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-04-25 14:51:45 UTC
Created attachment 186919 [details]
A reproducer

Opening the attachment in current master toward 7.6, reports failed assertion after commit efb3c57851d29440ef086c68a6c1ddbb8bc8fc00 (tdf#154113: do not forget to split the outermost section frame, 2023-04-20).
Comment 1 Mike Kaganski 2023-04-25 15:05:01 UTC
https://gerrit.libreoffice.org/c/core/+/150981
Comment 2 Commit Notification 2023-04-26 03:59:32 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ca317ff313958706c63b132113d3f706813587d

tdf#155011: Fix assert/check

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-04-26 07:28:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/4f5a196b4aaaaa86ccc5250f25d298e13a0fa952

tdf#155011: Fix assert/check

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-04-27 15:00:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/e8c1abfd7678eb2bfb6c411334f389ada515e14f

tdf#155011: Fix assert/check

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.