tdf#155011: Fix assert/check

pFrameStartAfter may be a section frame itself, thus its FindSctFrame
would not return this. Same for pSav.

Change-Id: Ib592965b30eb47f37ba54fe7f39af0b8689b3175
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150981
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 9ca317ff313958706c63b132113d3f706813587d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151013
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>